--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,38 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #222;
+  color: #fff;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button {
+  background-color: #444;
+  color: #fff;
+}
+
+a {
+  color: #aaa;
+}
+
+input[type="text"], input[type="search"] {
+  background-color: #444;
+  color: #fff;
+}
+
+h1, h2, h3 {
+  color: #fff;
+}
+
+table {
+  background-color: #333;
+}
+
+#search input[type="text"] {
+  background-color: #555;
+  color: #fff;
 }
